// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list of person snapshot apart from redux, import { ListOfPersons } 1`] = `
<ul>
  <li>
    petrov
  </li>
  <li>
    ivanov
  </li>
  <li>
    KHanov
  </li>
  <p
    className="ss"
  >
    some string from props
  </p>
</ul>
`;

exports[`list of persons snapshot without redux 1`] = `
<ul>
  <li>
    name: 
    ivan
     surname: 
    petrov
  </li>
  <li>
    name: 
    peter
     surname: 
    ivanov
  </li>
  <li>
    name: 
    Sergey
     surname: 
    KHanov
  </li>
  <p
    className="ss"
  >
     
    some string from props
     
  </p>
</ul>
`;
